# helloworld-rs

./: .dockerignore  Cargo.toml  Dockerfile
src/: main.rs
